#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psocake
#------------------------------------------------------------------------

Package author: Chunhong "Chuck" Yoon

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-35
2016-08-01 Chunhong Yoon
- fix bugs during refactoring

Tag: V00-01-34
2016-07-31 Chunhong Yoon
- refactor all panels

Tag: V00-01-33
2016-07-29 Chunhong Yoon
- added image panel

Tag: V00-01-32
2016-07-29 Chunhong Yoon
- added user feedback

Tag: V00-01-31
2016-07-26 Chunhong Yoon
- Majore refactoring of code

Tag: V00-01-30
2016-07-22 Chunhong Yoon
- Deploy geometry based on cirlce ROI

Tag: V00-01-29
2016-07-22 Chunhong Yoon
- Launcher for all threads

Tag: V00-01-28
2016-07-22 Chunhong Yoon
- Init logger

Tag: V00-01-27
2016-07-22 Chunhong Yoon
- Fix common mode correction

Tag: V00-01-26
2016-07-18 Chunhong Yoon
- changed nm to angstrom for unitcell display
- added detector centre indicator

Tag: V00-01-25
2016-07-14 Chunhong Yoon
- Added label panel
- Decouple elog with gui

Tag: V00-01-24
2016-07-05 Chunhong Yoon
- Masking for 2D detectors

Tag: V00-01-23
2016-06-29 Chunhong Yoon
- fix LitPixels

Tag: V00-01-22
2016-06-29 Chunhong Yoon
- Peak finding on Opal

Tag: V00-01-21
2016-06-29 Chunhong Yoon
- Handle area detectors with 2D shape
- Auto level for various image properties

Tag: V00-01-20
2016-06-17 Chunhong Yoon
- Added hybrid gain for cspad types

Tag: V00-01-19
2016-06-15 Chunhong Yoon
- Bug fix: use clen only at CXI

Tag: V00-01-18
2016-06-06 Chunhong Yoon
- Demo version

Tag: V00-01-17
2016-05-23 Chunhong Yoon
- Allow detector distance scan
- Triple integration ring

Tag: V00-01-16
2016-05-23 Chunhong Yoon
- Add indexing result display

Tag: V00-01-15
2016-05-22 Chunhong Yoon
- Add CrystFEL indexing panel

Tag: V00-01-14
2016-05-18 Chunhong Yoon